[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/SliderFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/UI/CheckBox.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="CustomCheck" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -19.5
margin_right = 184.0
margin_bottom = 19.5
focus_mode = 2
mouse_filter = 0
alignment = 1
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 340.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.803922, 0.913725, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "FULLSCREEN"

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 344.0
margin_right = 368.0
margin_bottom = 39.0
custom_constants/hseparation = 14
custom_styles/focus = SubResource( 1 )
align = 1

[connection signal="focus_entered" from="." to="." method="_on_CustomCheck_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_CustomCheck_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_CustomCheck_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_CustomCheck_mouse_entered"]
[connection signal="focus_entered" from="CheckBox" to="." method="_on_CheckBox_focus_entered"]
[connection signal="focus_exited" from="CheckBox" to="." method="_on_CheckBox_focus_exited"]
[connection signal="mouse_entered" from="CheckBox" to="." method="_on_CheckBox_mouse_entered"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
